Lots of unordered code. But successfully implemented performing the neural network operations on my GPU. I guess I am the #1 to execute using TornadoVM.